--- a/static/src/stylesheets/layout/new-header/_pillar-link.scss
+++ b/static/src/stylesheets/layout/new-header/_pillar-link.scss
@@ -1,10 +1,3 @@
-.l-side-margins {
-    &:before,
-    &:after {
-        top: -50px !important;
-    }
-}
-
 .pillar-link {
     @include fs-textSans(5);
     border-bottom: 0 solid $news-main-2;
@@ -25,13 +18,16 @@
         line-height: $veggie-burger-medium - $gs-baseline;
     }
 
-    @include mq(desktop) {
-        font-size: 22px;
+    @include mq(tablet) {
+        font-size: 24px;
         height: $gs-baseline * 5;
         letter-spacing: -.04rem;
         line-height: $gs-baseline * 5;
-        padding: 0 0 0 $gs-gutter / 2;
-        width: gs-span(1) + $gs-gutter * 2 + $gs-gutter / 2;
+        padding: 0 ($gs-gutter) 0 ($gs-gutter / 4);
+    }
+
+    @include mq(leftCol) {
+        padding: 0 ($gs-gutter * 2) 0 ($gs-gutter / 3);
     }
 
     &:before {
@@ -41,20 +37,24 @@
         display: block;
         left: 0;
         position: absolute;
-        top: $gs-baseline;
+        top: $gs-baseline + 1;
 
-        @include mq(desktop) {
-            bottom: -6px;
+        @include mq(tablet) {
+            bottom: -3px;
             top: $gs-baseline * 2;
         }
     }
 
     &:focus,
     &:hover {
-        border-bottom-width: 4px;
+        border-bottom-width: 3px;
         color: #ffffff;
         outline: none;
         text-decoration: none;
+
+        &.pillar-link--dropdown {
+            border-bottom: 0;
+        }
     }
 
     .new-header--slim & {
@@ -70,8 +70,6 @@
     font-weight: 700;
 
     @include mq(desktop) {
-        border-bottom-width: 4px;
-
         .new-header--open & {
             color: $news-support-1;
 
