--- a/static/src/stylesheets/base/_helpers.scss
+++ b/static/src/stylesheets/base/_helpers.scss
@@ -26,6 +26,12 @@
     }
 }
 
+.hide-until-desktop {
+    @include mq($until: desktop) {
+        display: none !important;
+    }
+}
+
 .hide-until-leftcol {
     @include mq($until: leftCol) {
         display: none !important;
@@ -54,6 +60,12 @@
 
 .hide-from-tablet {
     @include mq(tablet) {
+        display: none !important;
+    }
+}
+
+.hide-from-desktop {
+    @include mq(desktop) {
         display: none !important;
     }
 }
