--- a/static/src/stylesheets/layout/new-header/_variables.scss
+++ b/static/src/stylesheets/layout/new-header/_variables.scss
@@ -1,7 +1,7 @@
 // Specific values for veggie-burger and menu
 $gutter-small: 5px;
 $gutter-medium: 7px;
-$gutter-large: 7px;
+$gutter-large: 73px;
 
 $menu-spacing-left-small: $gs-gutter * 2 + $gs-gutter / 2;
 $menu-spacing-left-medium: $gs-gutter * 2 + $gs-gutter;
@@ -12,3 +12,4 @@ $highlight-blue: #74e7ff;
 
 $veggie-burger-small: 40px;
 $veggie-burger-medium: 48px;
+$veggie-burger-large: 56px;
