Scooped up all changes - will neaten commits

--- a/common/app/views/fragments/newHeader.scala.html
+++ b/common/app/views/fragments/newHeader.scala.html
@@ -96,7 +96,7 @@
                 </ul>
 
                 <label for="main-menu-toggle"
-                       class="js-change-link"
+                       class="js-change-link new-header__menu-toggle"
                        tabindex="0"
                        data-link-name="nav2 : veggie-burger : show">
                     <span class="veggie-burger hide-from-desktop">
@@ -107,6 +107,7 @@
                         <span class="u-h">All</span>
 
                         sections
+                        <span class="pillar-link--dropdown__icon"></span>
                     </span>
                 </label>
 
