--- a/static/src/stylesheets/layout/new-header/_menu.scss
+++ b/static/src/stylesheets/layout/new-header/_menu.scss
@@ -6,7 +6,7 @@
     font-size: 20px;
     left: 0;
     line-height: 1;
-    margin-right: $gutter-small + ($veggie-burger-small / 2);
+    margin-right: $gutter-small + ($veggie-burger-medium / 2);
     padding-bottom: $gs-baseline * 2;
     top: 0;
     z-index: $zindex-main-menu;
@@ -26,6 +26,10 @@
     }
 
     @include mq(mobileMedium) {
+        margin-right: $gutter-medium + ($veggie-burger-medium / 2);
+    }
+
+    @include mq(mobileLandscape) {
         margin-right: $gutter-medium + ($veggie-burger-medium / 2);
     }
 
