--- a/static/src/stylesheets/layout/new-header/_new-header.scss
+++ b/static/src/stylesheets/layout/new-header/_new-header.scss
@@ -97,30 +97,38 @@ from scrolling */
     }
 }
 
+.new-header__menu-toggle {
+    &:focus {
+        outline: 0;
+    }
+}
+
+.new-header--slim .new-header__menu-toggle {
+    @include mq(desktop) {
+        order: -1;
+    }
+}
+
 .new-header__logo__svg {
     display: block;
-    height: calc(3 / 16 * 170px);
-    margin-bottom: $gs-baseline;
+    height: calc(3 / 16 * 180px);
+    margin-bottom: $gs-baseline / 2;
     margin-right: $gs-gutter / 2;
     margin-top: $gs-baseline / 2;
-    width: 170px;
+    width: 180px;
 
     @include mq(mobileMedium) {
         height: calc(3 / 16 * 225px);
         width: 225px;
-        margin-bottom: $gs-baseline / 2;
     }
 
     @include mq(mobileLandscape) {
-        height: calc(3 / 16 * 260px);
         margin-bottom: 0;
         margin-right: $gs-gutter;
-        width: 260px;
     }
 
     @include mq(tablet) {
         height: calc(3 / 16 * 345px);
-        margin-bottom: -$gs-gutter;
         margin-top: $gs-baseline + $gs-baseline / 4;
         width: 345px;
     }
@@ -128,26 +136,27 @@ from scrolling */
     @include mq(desktop) {
         height: calc(3 / 16 * 385px);
         margin-top: $gs-baseline + $gs-baseline / 4;
-        margin-bottom: -$gs-gutter * 2;
+        margin-bottom: -$gs-gutter;
         width: 385px;
     }
 
     .new-header--slim & {
-        height: calc(3 / 16 * 155px);
-        margin-right: $gs-gutter;
-        margin-top: 7px;
-        width: 155px;
+        height: calc(3 / 16 * 180px);
+        margin: 5px ($veggie-burger-large + $gs-gutter) 0 0;
+        width: 180px;
 
         @include mq(mobileLandscape) {
-            margin-right: $gs-gutter * 1.5;
+            margin-right: $veggie-burger-large + $gs-gutter + ($gs-gutter / 2);
         }
 
-        @include mq(tablet) {
-            height: calc(3 / 16 * 170px);
-            margin-top: 5px;
-            width: 170px;
+        @include mq(desktop) {
+            margin-right: $gs-gutter;
         }
     }
+}
+
+.new-header--slim {
+    height: $veggie-burger-large - $gs-baseline;
 }
 
 // This is to force the primary links (news, opinion, sport, arts, lifestyle) onto a new line
