--- a/static/src/stylesheets/layout/new-header/_subnav-link.scss
+++ b/static/src/stylesheets/layout/new-header/_subnav-link.scss
@@ -1,29 +1,34 @@
 .subnav-link {
     @include fs-textSans(5);
-    border-bottom: 0 solid $neutral-3;
-    box-sizing: border-box;
     color: $neutral-1;
     display: block;
     font-size: 16px;
-    height: $veggie-burger-small - ($gs-baseline / 2);
-    line-height: $veggie-burger-small - ($gs-baseline / 2);
+    height: $veggie-burger-medium - $gs-baseline;
+    line-height: $veggie-burger-medium - $gs-baseline;
     padding: 0 ($gs-gutter / 4);
     position: relative;
-    transition: border 150ms ease-out;
 
-    &:before {
-        border-left: 1px solid $neutral-4;
-        bottom: -3px;
+    &:before,
+    &:after {
+        bottom: 0;
         content: '';
         display: block;
         left: 0;
         position: absolute;
-        top: $gs-baseline;
     }
 
-    @include mq(mobileMedium) {
-        height: $veggie-burger-medium - $gs-baseline;
-        line-height: $veggie-burger-medium - $gs-baseline;
+    &:before {
+        // Dividing lines
+        border-left: 1px solid $neutral-4;
+        top: 14px;
+        z-index: 1;
+    }
+
+    &:after {
+        // Underlines
+        border-bottom: 0 solid $neutral-3;
+        right: 0;
+        transition: border 150ms ease-out;
     }
 
     @include mq(tablet) {
@@ -38,9 +43,12 @@
 
     &:hover,
     &:focus {
-        border-width: 3px;
         color: $neutral-1;
         text-decoration: none;
+
+        &:not(.subnav-link--toggle-more):after {
+            border-bottom-width: 4px;
+        }
     }
 
     .subnav__item:first-child > & {
@@ -56,13 +64,40 @@
     background: transparent;
     border: 0;
     color: $neutral-2;
+    padding-right: $gs-gutter / 3;
+}
+
+.subnav-link--toggle-more__icon {
+    top: 50%;
+    float: right;
+    margin-top: -($gs-baseline / 6) / 2;
+
+    &,
+    &:before,
+    &:after {
+        background-color: currentColor;
+        border-radius: 50%;
+        content: '';
+        height: 3px;
+        right: 0;
+        position: absolute;
+        width: 3px;
+    }
 
     &:before {
-        content: none;
+        top: -4px;
+    }
+
+    &:after {
+        bottom: -4px;
     }
 }
 
+
 .subnav-link--current-section {
-    border-width: 3px;
     font-weight: 700;
+
+    &:after {
+        border-bottom-width: 4px;
+    }
 }
