--- a/common/app/views/fragments/items/facia_cards/contentCard.scala.html
+++ b/common/app/views/fragments/items/facia_cards/contentCard.scala.html
@@ -186,6 +186,14 @@ data-test-id="facia-card"
                 <div class="fc-item__footer--vertical" aria-hidden="true">@sublinks(item.sublinks)</div>
             }
 
+            <!-- <div class="fc-item__footer--vertical" aria-hidden="true"> 
+                <ul class="fc-sublinks u-unstyled u-faux-block-link__promote"> 
+                    <li class="fc-sublink fc-sublink--pillar-news fc-sublink--type-article" data-link-name="sublinks | 1"> <h3 class="fc-sublink__title"> <a href="http://m.thegulocal.com/media-network/2016/nov/15/data-driven-spinning-class-tech-fitness" class="fc-sublink__link" data-link-name="article"><span class="fc-sublink__kicker">Data-driven spinning class?</span> How tech is shaping fitness</a> </h3> </li> 
+                    <li class="fc-sublink fc-sublink--pillar-news fc-sublink--type-article" data-link-name="sublinks | 1"> <h3 class="fc-sublink__title"> <a href="http://m.thegulocal.com/media-network/2016/nov/15/data-driven-spinning-class-tech-fitness" class="fc-sublink__link" data-link-name="article"><span class="fc-sublink__kicker">Data-driven spinning class?</span> How tech is shaping fitness</a> </h3> </li> 
+                    <li class="fc-sublink fc-sublink--pillar-news fc-sublink--type-article" data-link-name="sublinks | 1"> <h3 class="fc-sublink__title"> <a href="http://m.thegulocal.com/media-network/2016/nov/15/data-driven-spinning-class-tech-fitness" class="fc-sublink__link" data-link-name="article"><span class="fc-sublink__kicker">Data-driven spinning class?</span> How tech is shaping fitness</a> </h3> </li> 
+                </ul> 
+            </div> -->
+
             @if(PillarCards.isSwitchedOff) {
                 @meta(item)
             }
@@ -206,7 +214,15 @@ data-test-id="facia-card"
         @if(item.sublinks.nonEmpty) {
             <footer class="fc-item__footer--horizontal">@sublinks(item.sublinks)</footer>
         }
-    
+
+        <!-- <footer class="fc-item__footer--horizontal">
+            <ul class="fc-sublinks u-unstyled u-faux-block-link__promote"> 
+                <li class="fc-sublink fc-sublink--pillar-news fc-sublink--type-article" data-link-name="sublinks | 1"> <h3 class="fc-sublink__title"> <a href="http://m.thegulocal.com/media-network/2016/nov/15/data-driven-spinning-class-tech-fitness" class="fc-sublink__link" data-link-name="article"><span class="fc-sublink__kicker">Data-driven spinning class?</span> How tech is shaping fitness</a> </h3> </li> 
+                <li class="fc-sublink fc-sublink--pillar-news fc-sublink--type-article" data-link-name="sublinks | 1"> <h3 class="fc-sublink__title"> <a href="http://m.thegulocal.com/media-network/2016/nov/15/data-driven-spinning-class-tech-fitness" class="fc-sublink__link" data-link-name="article"><span class="fc-sublink__kicker">Data-driven spinning class?</span> How tech is shaping fitness</a> </h3> </li> 
+                <li class="fc-sublink fc-sublink--pillar-news fc-sublink--type-article" data-link-name="sublinks | 1"> <h3 class="fc-sublink__title"> <a href="http://m.thegulocal.com/media-network/2016/nov/15/data-driven-spinning-class-tech-fitness" class="fc-sublink__link" data-link-name="article"><span class="fc-sublink__kicker">Data-driven spinning class?</span> How tech is shaping fitness</a> </h3> </li> 
+            </ul> 
+        </footer> -->
+
         <a @Html(item.header.url.hrefWithRel) class="u-faux-block-link__overlay js-headline-text" data-link-name="article" tabindex="-1">@RemoveOuterParaHtml(item.header.headline)</a>
     </div>
 }
