--- a/static/src/stylesheets/module/identity/_switchboard.scss
+++ b/static/src/stylesheets/module/identity/_switchboard.scss
@@ -2,8 +2,8 @@
 /* Switchboard
    ========================================================================== */
 
-$local-gutter: $gs-gutter / 1.75;
-$checkbox-size: $gs-gutter / 1.25;
+$local-gutter: $gs-gutter / 4;
+$checkbox-size: $gs-gutter / 1.3;
 
 .manage-account__switches ul,
 .manage-account__switches li {
@@ -14,27 +14,24 @@ $checkbox-size: $gs-gutter / 1.25;
 
 .manage-account__switches {
 
-    ul {
-        grid-template-columns: repeat(auto-fit, minmax(gs-span(4), 1fr));
-        grid-auto-rows: 1fr;
-        display: grid;
-        padding-top: $local-gutter;
-        grid-row-gap: $local-gutter;
-        grid-column-gap: $local-gutter;
-    }
-
-    &--narrow ul {
-        grid-template-columns: repeat(1, 1fr);
-        @include mq(tablet) {
-            grid-template-columns: repeat(2, 1fr);
-        }
-    }
-
     li {
         display: flex;
         margin-bottom: $local-gutter;
         @supports(display: grid) {
             margin: 0;
+        }
+    }
+
+    @include mq(tablet) {
+        ul {
+            grid-template-columns: repeat(auto-fit, minmax(gs-span(4), 1fr));
+            grid-auto-rows: 1fr;
+            display: grid;
+            grid-row-gap: $local-gutter * 2;
+            grid-column-gap: $local-gutter * 2;
+        }
+        &--narrow ul {
+            grid-template-columns: repeat(2, 1fr);
         }
     }
 
@@ -151,7 +148,8 @@ $checkbox-size: $gs-gutter / 1.25;
     background-size: 100% auto;
     background-position: 0 0;
     background-repeat: no-repeat;
-    padding-left: $local-gutter * 2 + $checkbox-size;
+    padding-left: $local-gutter * 2.5 + $checkbox-size;
+    padding-top: $local-gutter * 1.1;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -191,6 +189,15 @@ $checkbox-size: $gs-gutter / 1.25;
 
 .manage-account__switch-footer {
     margin-top: $local-gutter * 2;
+    &:before {
+        content: '\0020';
+        display: block;
+        width: 6em;
+        height: 0;
+        border-top: 1px solid $neutral-4;
+        position: relative;
+        top: $local-gutter * -.5;
+    }
 }
 
 .manage-account__switch-footer-tidbit {
